Further expanded Attempt, Point, Profile.  Also started the collection logic in DrawStuff